--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "ethers": "^5.5.1",
     "next": "^11.1.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-responsive-masonry": "^2.1.3"
   }
 }
