Better wallet connection UX

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
+      "@public/*": ["public/*"],
       "@components/*": ["components/*"],
       "@styles/*": ["styles/*"],
       "@utils/*": ["utils/*"]
