--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@pinata/sdk": "^1.1.23",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "^10.0.0",
     "keccak256": "^1.0.3",
     "sharp": "^0.29.2"
