Fix catalog script, make it sligtly more readable :0

--- a/client/.env.preview
+++ b/client/.env.preview
@@ -1,2 +1,3 @@
-catalogBaseURL = 'http://stephanfowler.com/nft-agent-catalog/example'
+#catalogBase = 'http://stephanfowler.com/nft-agent-catalog/example'
+catalogBase = '/example-catalog'
 catalogFilename = 'catalog_chainid_4.json'
