--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,3 @@
-catalogBaseURL = 'http://stephanfowler.com/nft-agent-catalog/example'
+#catalogBase = 'http://stephanfowler.com/nft-agent-catalog/example'
+catalogBase = '/example-catalog'
 catalogFilename = 'catalog_chainid_4.json'
