--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm run build"
+  command = "next build && next export"
   base = "client"
-  publish = "client/.next"
+  publish = "client/out"
