--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export"
+    "export": "next export"
   },
   "dependencies": {
     "ethers": "^5.5.1",
