catalog location defaults to ./client/public/catalog

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,6 @@
+# Catalog base dorectory can either be relative to client/public, 
+# ...or a URL path to a remote directory
 #catalogBase = 'http://stephanfowler.com/nft-agent-catalog/example'
-catalogBase = '/example-catalog'
+
+catalogBase = '/catalog'
 catalogFilename = 'catalog_chainid_4.json'
