--- a/client/.env.preview
+++ b/client/.env.preview
@@ -1,3 +1,3 @@
 #catalogBase = 'http://stephanfowler.com/nft-agent-catalog/example'
-catalogBase = '/example-catalog'
+catalogBase = '/catalog'
 catalogFilename = 'catalog_chainid_4.json'
