--- a/client/.env
+++ b/client/.env
@@ -1,6 +1,7 @@
-# Catalog base dorectory can either be relative to client/public, 
-# ...or a URL path to a remote directory
-#catalogBase = 'http://stephanfowler.com/nft-agent-catalog/example'
+# Catalog base directory can either be relative to client/public 
+# or a URL path to a remote directory, eg.
+# catalogBase = 'http://stephanfowler.com/nft-agent-catalog/example'
 
 catalogBase = '/catalog'
-catalogFilename = 'catalog_chainid_4.json'
+catalogFilename = 'catalog_chainid_31337.json'
+#catalogFilename = 'catalog_chainid_4.json'
