--- a/client/.env.production
+++ b/client/.env.production
@@ -1,3 +1,7 @@
-#catalogBase = 'http://stephanfowler.com/nft-agent-catalog/example'
+# Catalog base directory can either be relative to client/public 
+# or a URL path to a remote directory, eg. 'http://example.com/nft-agent-catalog'
+
 catalogBase = '/catalog'
 catalogFilename = 'catalog_chainid_4.json'
+
+networkKey = "https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf";
