--- a/client/.env.production
+++ b/client/.env.production
@@ -2,6 +2,6 @@
 # or a URL path to a remote directory, eg. 'http://example.com/nft-agent-catalog'
 
 catalogBase = '/catalog'
-catalogFilename = 'catalog_chainid_4.json'
 
-networkKey = "https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf";
+catalogFilename = 'catalog_chainid_4.json'
+networkKey = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
