price setting logic

--- a/client/.env
+++ b/client/.env
@@ -4,7 +4,7 @@
 
 catalogBase = '/catalog'
 
-#catalogFilename = 'catalog_chainid_31337.json'
+catalogFilename = 'catalog_chainid_31337.json'
 
-catalogFilename = 'catalog_chainid_4.json'
-networkKey = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
+#catalogFilename = 'catalog_chainid_4.json'
+#networkKey = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
