remove cacheing of status in catalog, refactor

--- a/client/.env
+++ b/client/.env
@@ -8,3 +8,5 @@ catalogBase = '/catalog'
 
 catalogFilename = 'catalog_chainid_4.json'
 networkKey = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
+
+creatorAddress = '0x72dAd71E89a5e4ED46754b0A0fb28Cb6AF721844'
