--- a/client/.env
+++ b/client/.env
@@ -1,12 +1,14 @@
-# Catalog base directory can either be relative to client/public 
-# or a URL path to a remote directory, eg.
-# catalogBase = 'http://stephanfowler.com/nft-agent-catalog/example'
+#catalogFilename = 'catalog_chainid_31337.json'
+catalogFilename = 'catalog_chainid_4.json'
 
+# Catalog base directory can either be relative to client/public 
+# or a URL path to a remote directory, eg. 'http://stephanfowler.com/nft-surface-catalog/example'
 catalogBase = '/catalog'
 
-#catalogFilename = 'catalog_chainid_31337.json'
+creatorAddress  = '0x72dAd71E89a5e4ED46754b0A0fb28Cb6AF721844'
+creatorName     = 'FLOX'
+siteTitle       = 'FLOX NFT Catalog'
+siteDescription = 'Artworks by FLOX for minting, trading or linking to secondary open NFT marketplaces'
+twitterHandle   = '@stephanfowler'
 
-catalogFilename = 'catalog_chainid_4.json'
 networkKey = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
-
-creatorAddress = '0x72dAd71E89a5e4ED46754b0A0fb28Cb6AF721844'
