--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,6 @@
 #catalogFilename = 'catalog_chainid_31337.json'
-catalogFilename = 'catalog_chainid_4.json'
+#catalogFilename = 'catalog_chainid_4.json'
+catalogFilename = 'catalog_chainid_80001.json'
 
 # Catalog base directory can either be relative to client/public 
 # or a URL path to a remote directory, eg. 'http://stephanfowler.com/nft-surface-catalog/example'
@@ -11,4 +12,5 @@ siteTitle       = 'FLOX NFT Catalog'
 siteDescription = 'Artworks by FLOX for minting, trading or linking to secondary open NFT marketplaces'
 twitterHandle   = '@stephanfowler'
 
-networkKey = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
+#networkKey = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
+networkKey = 'https://polygon-mumbai.g.alchemy.com/v2/9YHx4Rpw134DvrCE2TMjWK5Y9esxjHyz'
