example config for ethereum

--- a/client/.env
+++ b/client/.env
@@ -2,8 +2,8 @@
 catalogFilename = 'catalog_chainid_4.json'
 #catalogFilename = 'catalog_chainid_80001.json'
 
-#networkKey      = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
-networkKey      = 'https://polygon-mumbai.g.alchemy.com/v2/9YHx4Rpw134DvrCE2TMjWK5Y9esxjHyz'
+networkKey      = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
+#networkKey      = 'https://polygon-mumbai.g.alchemy.com/v2/9YHx4Rpw134DvrCE2TMjWK5Y9esxjHyz'
 
 # Catalog base directory can either be relative to client/public 
 # or a URL path to a remote directory, eg. 'http://stephanfowler.com/nft-surface-catalog/example'
