--- a/client/.env
+++ b/client/.env
@@ -1,11 +1,11 @@
 #catalogFilename = 'catalog_chainid_31337.json'
 
-#catalogFilename = 'catalog_chainid_4.json'
-catalogFilename = 'catalog_chainid_80001.json'
+catalogFilename = 'catalog_chainid_4.json'
+#catalogFilename = 'catalog_chainid_80001.json'
 #catalogFilename = 'catalog_chainid_421611.json'
 
-#networkKey      = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
-networkKey      = 'https://polygon-mumbai.g.alchemy.com/v2/9YHx4Rpw134DvrCE2TMjWK5Y9esxjHyz'
+networkKey      = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
+#networkKey      = 'https://polygon-mumbai.g.alchemy.com/v2/9YHx4Rpw134DvrCE2TMjWK5Y9esxjHyz'
 #networkKey      = 'https://arb-rinkeby.g.alchemy.com/v2/T5vuJ15qdstlhERv1VqNPk7nR2sTsfuQ'
 
 # Catalog base directory can either be relative to client/public 
