Note on API key restrictions

--- a/client/.env
+++ b/client/.env
@@ -4,6 +4,7 @@ catalogFilename = 'catalog_chainid_4.json'
 #catalogFilename = 'catalog_chainid_80001.json'
 #catalogFilename = 'catalog_chainid_421611.json'
 
+# NOTE: you'll need your own API keys; the below all have their access restricted.
 networkKey      = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDdwICaMxkf'
 #networkKey      = 'https://polygon-mumbai.g.alchemy.com/v2/9YHx4Rpw134DvrCE2TMjWK5Y9esxjHyz'
 #networkKey      = 'https://arb-rinkeby.g.alchemy.com/v2/T5vuJ15qdstlhERv1VqNPk7nR2sTsfuQ'
