--- a/client/.env
+++ b/client/.env
@@ -13,10 +13,9 @@ networkKey      = 'https://eth-rinkeby.alchemyapi.io/v2/JZzxLi6MDK2NoxcNmEC7DNDd
 # or a URL path to a remote directory, eg. 'http://stephanfowler.com/nft-surface-catalog/example'
 catalogBase = '/catalog'
 
-creatorAddress  = '0x72dAd71E89a5e4ED46754b0A0fb28Cb6AF721844'
 creatorName     = 'FLOX'
 siteTitle       = 'FLOX NFT Catalog'
 siteDescription = 'Artworks by FLOX for minting, trading or linking to secondary open NFT marketplaces'
-twitterHandle   = '@stephanfowler'
+twitterHandle   = '@yourtwitterhandle'
 
 ipfsGateway     = 'https://gateway.pinata.cloud/ipfs/<ipfsHash>'
